# SecurityBuddy

./: .env.example  .gitignore  .replit  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  api_routes.py  app.py  background_jobs.py  cache_manager.py  cli.py  email_analyzer.py  gmail_manager.py  guides_content.py  main.py  models.py  notification_system.py  pdf_generator.py  pentest_scanner.py  premium_features.py  pyproject.toml  requirements.txt  requirements_vercel.txt  routes.py  scanner.py  seo_analyzer.py  threat_intel.py  user_guide_system.py  validators.py  vercel.json
.github/workflows/: security-scan-example.yml
api/: index.py
attached_assets/: Pasted-Certo-Luca-Ho-analizzato-l-applicazione-che-hai-condiviso-e-posso-fornirti-un-feedback-dettagliato-1748292766214.txt  Pasted-Domanda-molto-intelligente-Luca-e-assolutamente-s-ce-ne-sono-gi-molti-in-commercio-Ma-questo--1748292732058.txt  Pasted-Perfetto-Luca-Ecco-un-prompt-dettagliato-da-usare-su-Replit-per-generare-e-costruire-la-tua-app-in-1748292337177.txt
static/css/: style.css
static/js/: enhancements.js  main.js
templates/: 404.html  500.html  about.html  account.html  api_keys.html  base.html  dashboard.html  email.html  guide.html  guides.html  index.html  login.html  newsletter_manager.html  password_generator.html  pentest_result.html  posti.html  premium.html  privacy.html  scan_result.html  seo.html  seo_crawl_waiting.html  seo_site.html  threat.html  unsubscribe_confirm.html
(+1 files in other folders)
