[project]
name = "securitybuddy"
version = "2.0.0"
description = "Automated web security scanner — CLI, API and web interface"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "python-nmap>=0.7.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "twilio>=9.6.1",
    "sendgrid>=6.12.2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "celery>=5.5.2",
    "redis>=6.1.0",
    "apscheduler>=3.11.0",
    "dnspython>=2.7.0",
    "python-whois>=0.9.5",
    "reportlab>=4.4.1",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
securitybuddy = "cli:main"

[project.urls]
Homepage = "https://securitybuddy.app"
Repository = "https://github.com/therealmogu/securitybuddy"
